feat: Implement Mattermost API integration for status management
- Added MattermostAPI class with methods for user authentication, status updates, and settings management.
- Created HTML structure for Mattermost Status Manager tab, including authentication forms and status controls.
- Developed JavaScript functionality for handling user interactions, including login, token authentication, and status updates.
- Integrated Google Meet settings for automatic status updates during meetings.
- Implemented storage and retrieval of authentication data and settings using Chrome storage.

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,9 @@
     "notifications"
   ],
   "host_permissions": [
-    "https://generativelanguage.googleapis.com/*"
+    "https://generativelanguage.googleapis.com/*",
+    "*://*.twntydigital.de/*",
+    "https://meet.google.com/*"
   ],
   "background": {
     "service_worker": "background.js"
@@ -20,6 +22,10 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"]
+    },
+    {
+      "matches": ["https://meet.google.com/*-*-*"],
+      "js": ["mattermost-meet-integration.js"]
     }
   ],
   "action": {
