--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Branch & Commit Helper",
-  "version": "25.08.04",
+  "version": "25.08.09",
   "description": "Generate branch names and commit messages using Gemini AI with custom rules",
   "permissions": [
     "storage",
@@ -21,7 +21,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js", "breakpoint-checker.js"]
     },
     {
       "matches": ["https://meet.google.com/*-*-*"],
